# oarepo-requests

./: .copyright.tmpl  .eslintrc.js  .gitignore  README.md  docker-compose.yml  format.sh  messages.po  oarepo.yaml  package.json  pyproject.toml  resolve_invenio.sh  run-tests.sh  run_tests.sh  setup.cfg  translate.sh
.github/workflows/: build.yaml  main.yaml  push.yaml  release.yaml
oarepo_requests/: __init__.py  cli.py  config.py  errors.py  ext.py  identity_to_entity_references.py  initial_config.py  invenio_patches.py  models.py  proxies.py  receiver.py  snapshots.py  temp_utils.py  typing.py  utils.py
oarepo_requests/actions/: cascade_events.py  components.py  delete_draft.py  delete_published_record.py  delete_topic.py  edit_topic.py  generic.py  new_version.py  publish_draft.py  publish_new_version.py  record_snapshot_mixin.py
oarepo_requests/alembic/: _1ebe56f98fc7_create_snapshot_table.py  _57aebe908bcb_create_snapshot_table.py  _985368490c5b_create_oarepo_requests_branch.py
oarepo_requests/components/: __init__.py  requests.py
oarepo_requests/model/: __init__.py
oarepo_requests/model/presets/requests/: __init__.py  ext_request_types.py  ext_requests.py  finalize_app.py  register_resolvers.py
oarepo_requests/notifications/: __init__.py  filters.py  generators.py  resolvers.py  user_notification_resolver.py
oarepo_requests/notifications/builders/: __init__.py  base.py  comment.py  delete_published_record.py  escalate.py  oarepo.py  publish.py
oarepo_requests/notifications/generators/: __init__.py  context.py  recipients.py
oarepo_requests/permissions/: generators.py  identity.py  presets.py  requester.py
oarepo_requests/records/: __init__.py  dumpers.py
oarepo_requests/resolvers/: __init__.py  autoapprove.py  generators.py  interface.py  multiple_recipients.py  resolver.py  service_result.py  ui.py  user.py  user_notification_resolver.py
oarepo_requests/resources/: __init__.py  config.py  resource.py  ui.py
oarepo_requests/resources/components/: __init__.py
oarepo_requests/resources/draft/: __init__.py  config.py  resource.py
oarepo_requests/resources/draft/types/: __init__.py  config.py  resource.py
oarepo_requests/resources/events/: __init__.py  config.py  resource.py
oarepo_requests/resources/oarepo/: __init__.py  config.py  resource.py
oarepo_requests/resources/record/: __init__.py  config.py  resource.py
oarepo_requests/resources/record/types/: __init__.py  config.py  resource.py
oarepo_requests/services/: config.py  create.py  escalation.py  links.py  results.py  schema.py  search.py  service.py  tasks.py  ui_schema.py
oarepo_requests/services/auto_approve/: config.py
oarepo_requests/services/components/: __init__.py  autorequest.py  results.py  snapshot_component.py
oarepo_requests/services/draft/: __init__.py  config.py  service.py
oarepo_requests/services/draft/types/: __init__.py  service.py
oarepo_requests/services/facets/: params.py
oarepo_requests/services/notifications/builders/: oarepo.py  publish.py
oarepo_requests/services/oarepo/: __init__.py  config.py  service.py
oarepo_requests/services/permissions/: __init__.py  events.py  generators.py  identity.py  requester.py  workflow_policies.py
oarepo_requests/services/permissions/generators/: __init__.py  active.py  conditional.py  workflow_based.py
oarepo_requests/services/record/: __init__.py  config.py  service.py
oarepo_requests/services/record/components/: __init__.py  snapshot_component.py
oarepo_requests/services/record/types/: __init__.py  service.py
oarepo_requests/tasks/: __init__.py  clean_snapshots.py
oarepo_requests/templates/oarepo/invenio_notifications/: comment-request-event.create.jinja
oarepo_requests/templates/semantic-ui/invenio_notifications/: delete-published-record-request-event.accept.jinja  delete-published-record-request-event.decline.jinja  escalate-request-event.submit.jinja
oarepo_requests/translations/: _only_for_translations.py  messages.mo  messages.pot
oarepo_requests/translations/cs/LC_MESSAGES/: messages.mo  (+1 more)
oarepo_requests/types/: __init__.py  community_submission.py  delete_draft.py  delete_published_record.py  delete_record.py  edit_record.py  generic.py  new_version.py  publish_base.py  publish_changed_metadata.py  publish_draft.py  publish_new_version.py  record_snapshot_mixin.py  ref_types.py  user_access.py
oarepo_requests/types/events/: __init__.py  escalation.py  record_snapshot.py  topic_delete.py  topic_update.py  validation.py
oarepo_requests/ui/: __init__.py  config.py  overrides.py  resource.py  views.py
oarepo_requests/ui/components/: __init__.py  action_labels.py  custom_fields.py  ui_config.py
oarepo_requests/ui/resources/: components.py
oarepo_requests/ui/theme/: __init__.py  webpack.py
oarepo_requests/utils/: utils.py
oarepo_requests/views/: __init__.py  api.py  app.py
tests/: __init__.py  conftest.py  thesis.yaml  thesis_workflows.yaml
tests/mock_requests/: setup.py  type.py
tests/mock_requests/mock_requests/: type.py
tests/test_requests/: __init__.py  conftest.py  test_allowed_request_types_link_and_service.py  test_autoaccept.py  test_cascade_events.py  test_conditional_recipient.py  test_create_conditions.py  test_create_inmodel.py  test_default_recipient_method.py  test_delete.py  test_diff_records.py  test_edit.py  test_error_handlers.py  test_escalation.py  test_expand.py  test_extended.py  test_index_refresh.py  test_new_version.py  test_no_recipient.py  test_notifications.py  test_param_interpreters.py  test_payload_schema.py  test_privileged_access.py  test_publish.py  test_publish_delete_components.py  test_read_extended.py  test_record_requests.py  test_requests.py  test_search.py  test_system_resolver.py  test_timeline.py  test_topic_resolve.py  test_topic_update.py  test_ui_serialialization.py  test_user_access.py  test_workflows.py  utils.py
tests/test_ui/: __init__.py  conftest.py  manifest.json  model.py  test_overrides.py  test_ui_resource.py
tests/test_ui/templates/: TestDetail.jinja  TestEdit.jinja  test_detail.html  test_edit.html
(+175 files in other folders)
