[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oarepo-requests"
dynamic = ["version"]
description = "Requests module for invenio 3.5+"
readme = "README.md"
license = "MIT"
dependencies = [
    "oarepo[rdm,tests]>=13,<14",
    "invenio-requests",
    "oarepo-runtime",
    "oarepo-workflows",
]

[project.urls]
Homepage = "https://github.com/oarepo/oarepo-requests"

[project.optional-dependencies]
tests = [
    "deepdiff",
    "oarepo-ui",
    "pytest-oarepo[requests]",
]

[project.entry-points."invenio_assets.webpack"]
oarepo_requests_ui_theme = "oarepo_requests.ui.theme.webpack:theme"

[project.entry-points."invenio_base.api_apps"]
oarepo_requests = "oarepo_requests.ext:OARepoRequests"

[project.entry-points."invenio_base.api_blueprints"]
oarepo_notifications = "oarepo_requests.views.api:create_notifications"
oarepo_requests = "oarepo_requests.views.api:create_oarepo_requests"
oarepo_requests_events = "oarepo_requests.views.api:create_oarepo_requests_events"

[project.entry-points."invenio_base.api_finalize_app"]
oarepo_requests = "oarepo_requests.ext:api_finalize_app"

[project.entry-points."invenio_base.apps"]
thesis = "oarepo_requests.ext:OARepoRequests"

[project.entry-points."invenio_base.blueprints"]
oarepo_notifications = "oarepo_requests.views.app:create_notifications"
oarepo_request_form_config = "oarepo_requests.ui.views:create_requests_form_config_blueprint"
oarepo_requests = "oarepo_requests.views.app:create_app_blueprint"
oarepo_requests_events = "oarepo_requests.views.app:create_app_events_blueprint"
oarepo_requests_ui = "oarepo_requests.ui.views:create_blueprint"

[project.entry-points."invenio_base.finalize_app"]
oarepo_requests = "oarepo_requests.ext:finalize_app"

[project.entry-points."invenio_db.alembic"]
oarepo_requests = "oarepo_requests:alembic"

[project.entry-points."invenio_db.models"]
record_snapshots = "oarepo_requests.models"

[project.entry-points."invenio_i18n.translations"]
oarepo_requests_ui = "oarepo_requests"

[project.entry-points."invenio_requests.types"]
delete_draft = "oarepo_requests.types.delete_draft:DeleteDraftRequestType"
delete_published_record = "oarepo_requests.types.delete_published_record:DeletePublishedRecordRequestType"
edit_published_record = "oarepo_requests.types.edit_record:EditPublishedRecordRequestType"
new_version = "oarepo_requests.types.new_version:NewVersionRequestType"
publish_changed_metadata = "oarepo_requests.types.publish_changed_metadata:PublishChangedMetadataRequestType"
publish_draft = "oarepo_requests.types.publish_draft:PublishDraftRequestType"
publish_new_version = "oarepo_requests.types.publish_new_version:PublishNewVersionRequestType"

[project.entry-points."oarepo_requests.identity_to_entity_references"]
group = "oarepo_requests.identity_to_entity_references:group_mappings"
user = "oarepo_requests.identity_to_entity_references:user_mappings"

[project.entry-points."oarepo_workflows.state_changed_notifiers"]
auto-requester = "oarepo_requests.services.permissions.requester:auto_request_state_change_notifier"

[tool.hatch.version]
path = "oarepo_requests/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/oarepo_requests",
]

[tool.pytest.ini_options]
    testpaths = [
        "tests/test_requests",
        "tests/test_ui",
    ]
