[project]
name = "oarepo-requests"
version = "4.0.0"
description = "Extra requests for InvenioRDM ecosystem"
readme = "README.md"
authors = [
    { name = "Ronald Krist", email = "krist@cesnet.cz" }
]
requires-python = ">=3.14,<3.15"

dependencies = [
    "oarepo[rdm,tests]>=14.0.0,<15.0.0",
    "oarepo-runtime>=3.0.0,<4.0.0",
    "oarepo-model>=1.0.0,<2.0.0",
    "oarepo-workflows>=3.0.0,<4.0.0",

    # invenio dependencies
    "invenio-app-rdm>=14.0.0b0,<15.0.0",
    "invenio-search>=3.0.0,<4.0.0",
]

[project.urls]
Homepage = "https://github.com/oarepo/oarepo-requests"

[project.optional-dependencies]
dev = [
    "ruff>=0.11.13",
    "types-PyYAML",
    "oarepo-invenio-typing-stubs"
]

tests = [
    "pytest-invenio>=4.0.0,<5.0.0",
    "pytest-oarepo>=3.0.0,<4.0.0",
    "oarepo-rdm>=2.0.0,<3.0.0",
    "deepdiff",
]
oarepo14 = [
    "oarepo[rdm,tests]>=14.0.0,<15.0.0",
]

[project.entry-points."invenio_base.apps"]
oarepo_requests = "oarepo_requests.ext:OARepoRequests"

[project.entry-points."invenio_base.api_apps"]
oarepo_requests = "oarepo_requests.ext:OARepoRequests"
[project.entry-points."invenio_base.api_blueprints"]
oarepo_notifications = "oarepo_requests.views.api:create_notifications"
[project.entry-points."invenio_base.blueprints"]
oarepo_notifications = "oarepo_requests.views.app:create_notifications"
[project.entry-points."invenio_assets.webpack"]
# oarepo_requests_ui_theme = "oarepo_requests.ui.theme.webpack:theme"

[project.entry-points."invenio_i18n.translations"]
oarepo_requests_ui = "oarepo_requests"

[project.entry-points."invenio_requests.types"]
delete_published_record = "oarepo_requests.types.delete_published_record:DeletePublishedRecordRequestType"
edit_published_record = "oarepo_requests.types.edit_record:EditPublishedRecordRequestType"
publish_draft = "oarepo_requests.types.publish_draft:PublishDraftRequestType"
new_version = "oarepo_requests.types.new_version:NewVersionRequestType"
publish_new_version = "oarepo_requests.types.publish_new_version:PublishNewVersionRequestType"
publish_changed_metadata = "oarepo_requests.types.publish_changed_metadata:PublishChangedMetadataRequestType"

[project.entry-points."invenio_base.finalize_app"]
oarepo_requests = "oarepo_requests.ext:finalize_app"

[project.entry-points."invenio_base.api_finalize_app"]
oarepo_requests = "oarepo_requests.ext:api_finalize_app"
# [project.entry-points."invenio_db.models"]
# record_snapshots = "oarepo_requests.models"

[project.entry-points."invenio_db.alembic"]
oarepo_requests = "oarepo_requests:alembic"

# [project.entry-points."oarepo_workflows.state_changed_notifiers"]
# auto_requester = "oarepo_requests.services.permissions.requester:auto_request_state_change_notifier"

[project.entry-points."invenio_config.module"]
oarepo_requests = "oarepo_requests.initial_config"
[project.entry-points."invenio_notifications.entity_resolvers"]
request = "oarepo_requests.notifications.resolvers:requests_resolver"
request_event = "oarepo_requests.notifications.resolvers:request_events_resolver"
record = "oarepo_requests.notifications.resolvers:record_resolver"
user = "oarepo_requests.notifications.resolvers:user_resolver"
multiple = "oarepo_requests.notifications.resolvers:multiple_entities_resolver"

[[tool.mypy.overrides]]
module = ["untyped_package.*"]
follow_untyped_imports = true


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "/oarepo_requests",
]
